--- a/app/src/main/res/layout/activity_navigation_screen.xml
+++ b/app/src/main/res/layout/activity_navigation_screen.xml
@@ -115,6 +115,16 @@
                 android:textSize="18sp" />
 
             <Button
+                android:id="@+id/btnMyNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorPrimaryBackground"
+                android:text="My Notes"
+                android:layout_marginBottom="16dp"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+            <Button
                 android:id="@+id/btnFake"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
