--- a/app/src/main/res/layout/announcement_item.xml
+++ b/app/src/main/res/layout/announcement_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginBottom="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    app:cardBackgroundColor="@color/card_background"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
@@ -23,13 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/announcement_title_label"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/announcementTitleValueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
+            android:textColor="@color/black"
             android:textStyle="bold" />
 
         <TextView
@@ -38,13 +39,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/announcement_author_label"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/announcementAuthorValueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/announcementClassTextView"
@@ -52,13 +53,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/announcement_class_label"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/announcementClassValueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/announcementDateTextView"
@@ -66,13 +67,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/announcement_date_label"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/announcementDateValueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/announcementContentTextView"
@@ -80,13 +81,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/announcement_content_label"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/announcementContentValueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/black" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+
 
