--- a/app/src/main/res/layout/activity_navigation_screen.xml
+++ b/app/src/main/res/layout/activity_navigation_screen.xml
@@ -14,6 +14,8 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -156,19 +158,19 @@
 
             </LinearLayout>
 
-<!--            <LinearLayout-->
-<!--                android:id="@+id/btnFake"-->
-<!--                style="@style/CustomButtonStyle">-->
+            <LinearLayout
+                android:id="@+id/btnAutomaticStudentAttendance"
+                style="@style/CustomButtonStyle">
 
-<!--                <TextView-->
-<!--                    style="@style/CustomButtonTextStyle"-->
-<!--                    android:text="Fake Button" />-->
+                <TextView
+                    style="@style/CustomButtonTextStyle"
+                    android:text="Automated Student Attendance" />
 
-<!--                <ImageView-->
-<!--                    style="@style/CustomButtonImageStyle"-->
-<!--                    android:src="@drawable/orange_logo" />-->
+                <ImageView
+                    style="@style/CustomButtonImageStyle"
+                    android:src="@drawable/orange_logo" />
 
-<!--            </LinearLayout>-->
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/btnLogout"
