--- a/app/src/main/res/layout/activity_ask_ai.xml
+++ b/app/src/main/res/layout/activity_ask_ai.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,17 +30,6 @@
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/spinner_border"
-        android:popupBackground="@color/orangeLight"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
-
-    <Spinner
         android:id="@+id/spinner3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -50,7 +38,7 @@
         android:popupBackground="@color/orangeLight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -62,6 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner3"
         android:indeterminateTint="@color/colorAccent"/>
+
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -76,11 +65,11 @@
         app:layout_constraintTop_toBottomOf="@+id/spinner3">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/answerTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
             android:padding="16dp"
+            android:text=""
             android:textColor="@color/colorAccent"
             android:textSize="16sp" />
     </ScrollView>
